--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,6 +17,9 @@ jobs:
     - name: move to prime_check module
       run: cd ${{github.workspace}}/worker/prime_check
 
+    - name: check rel dir
+      run: ls
+
     - name: build unit-test
       run: gcc .\unit_test.cpp .\prime_check.cpp -o unit_test.exe -Incruses
     
