--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,10 +13,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: build unit-test
       working-directory: ${{github.workspace}}/worker/prime_check
-      run: gcc .\unit_test.cpp .\prime_check.cpp -o unit_test.exe -Incruses
+      run: |
+      pwd
+      gcc .\unit_test.cpp .\prime_check.cpp -o unit_test.exe -Incruses
     
     - name: run unit-test
       run: ./unit_test.exe
