--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,8 +15,8 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: build unit-test
-      working-directory: ${{github.workspace}}/worker/prime_check
-      run: gcc ./unit_test.cpp ./prime_check.cpp -o unit_test.exe -Incruses
+      working-directory: ${{github.workspace}}/worker/lib/PrimeCheck
+      run: gcc ./unit_test.cpp ./src/prime_check.cpp -o unit_test.exe -Incruses
   
   test-prime-check:
   
@@ -26,9 +26,9 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: build unit-test
-      working-directory: ${{github.workspace}}/worker/prime_check
-      run: gcc ./unit_test.cpp ./prime_check.cpp -o unit_test.exe -Incruses
+      working-directory: ${{github.workspace}}/worker/lib/PrimeCheck
+      run: gcc ./unit_test.cpp ./src/prime_check.cpp -o unit_test.exe -Incruses
 
     - name: run unit-test
-      working-directory: ${{github.workspace}}/worker/prime_check
+      working-directory: ${{github.workspace}}/worker/lib/PrimeCheck
       run: ./unit_test.exe
