--- a/tuple-space/Makefile
+++ b/tuple-space/Makefile
@@ -1,12 +1,14 @@
 CC = gcc
 
 SRCDIR = ../common/lib
+SRCDIR2 = ./lib
 SOURCES = $(wildcard $(SRCDIR)/*.c)
+SOURCES2 = $(wildcard $(SRCDIR2)/*.c)
 EXAMPLE = main.c
 OUT = tuple.out
 
 all: $(SOURCES) $(EXAMPLE)
-	$(CC) $(CFLAGS) $(SOURCES) $(EXAMPLE) -o $(OUT)
+	$(CC) $(CFLAGS) $(SOURCES) $(SOURCES2) $(EXAMPLE) -o $(OUT)
 
 .PHONY: clean
 
